--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 
 spring.datasource1.datasource.jdbcUrl= jdbc:mysql://localhost:3306/datasource1
-spring.datasource1.datasource.username=root
-spring.datasource1.datasource.password=password
+spring.datasource1.datasource.username=
+spring.datasource1.datasource.password=
 spring.datasource1.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.show-sql=true
 
-spring.datasource2.datasource.jdbcUrl= jdbc:postgresql://localhost:5433/admission_table
-spring.datasource2.datasource.username=postgres
-spring.datasource2.datasource.password=2143
-#spring.datasource2.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource2.datasource.jdbcUrl= jdbc:mysql://localhost:3306/datasource2
+spring.datasource2.datasource.username=
+spring.datasource2.datasource.password=
+
+spring.datasource2.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+s3.aws.access_key_id= 
+s3.aws.secret_access_key= 
+s3.bucket= 
+s3.region= 
